unpackaged/main/default/objects/Opportunity_Report__c/Opportunity_Report__c.object-meta.xml
<CustomObject>
    <label>Opportunity Report</label>
    <nameField>
        <label>Opportunity Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>