unpackaged/main/default/objects/Opportunity_Report__c/fields/Acquiring_Fees_1__c.field-meta.xml
<CustomField>
    <fullName>Acquiring_Fees_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Acquiring Fees</label>
    <referenceTo>Acquiring_Fees__c</referenceTo>
    <relationshipLabel>Opportunity Reports</relationshipLabel>
    <relationshipName>Opportunity_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>