unpackaged/main/default/objects/Opportunity_Report__c/fields/Charges_1__c.field-meta.xml
<CustomField>
    <fullName>Charges_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Charges</label>
    <referenceTo>Charges__c</referenceTo>
    <relationshipLabel>Opportunity Reports</relationshipLabel>
    <relationshipName>Opportunity_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>