unpackaged/main/default/objects/Opportunity_Report__c/fields/DCC_Proposal_1__c.field-meta.xml
<CustomField>
    <fullName>DCC_Proposal_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DCC Proposal</label>
    <referenceTo>DCC_Proposal__c</referenceTo>
    <relationshipLabel>Opportunity Reports</relationshipLabel>
    <relationshipName>Opportunity_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>