unpackaged/main/default/objects/Opportunity_Report__c/fields/Hardware_1__c.field-meta.xml
<CustomField>
    <fullName>Hardware_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hardware</label>
    <referenceTo>Hardware__c</referenceTo>
    <relationshipLabel>Opportunity Reports</relationshipLabel>
    <relationshipName>Opportunity_Reports1</relationshipName>
    <type>Lookup</type>
</CustomField>