unpackaged/main/default/objects/Opportunity_Report__c/fields/Opportunity_Master__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Master__c</fullName>
    <label>Opportunity Master</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Reports</relationshipLabel>
    <relationshipName>Opportunity_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>