unpackaged/main/default/objects/Opportunity_Report__c/fields/Report_Type__c.field-meta.xml
<CustomField>
    <fullName>Report_Type__c</fullName>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquiring Fees</fullName>
            </value>
            <value>
                <fullName>Charges</fullName>
            </value>
            <value>
                <fullName>DCC Proposals</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>TF Proposals</fullName>
            </value>
            <value>
                <fullName>Yearly Fees</fullName>
            </value>
            <value>
                <fullName>Master</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>