unpackaged/main/default/objects/Opportunity_Report__c/fields/TF_Proposal_1__c.field-meta.xml
<CustomField>
    <fullName>TF_Proposal_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TF Proposal</label>
    <referenceTo>TF_Proposal__c</referenceTo>
    <relationshipLabel>Opportunity Reports</relationshipLabel>
    <relationshipName>Opportunity_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>