unpackaged/main/default/objects/Opportunity_Report__c/fields/Yearly_Fees_1__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Fees_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Fees</label>
    <referenceTo>Subscription_Fees__c</referenceTo>
    <relationshipLabel>Opportunity Reports</relationshipLabel>
    <relationshipName>Opportunity_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>